# OpenGL

./: .gitignore  README.md  _compile.bat  compile.bat
src/: CMakeLists.txt  ebo.cpp  ebo.h  inputhandler.cpp  inputhandler.h  main.cpp  mesh.cpp  mesh.h  render.cpp  render.h  shader.cpp  shader.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/include/glad/: glad.c  glad.h
